# projet-informatique

./: .gitignore  .gitmodules  CMakeLists.txt  Image.cpp  Image.h  Projetinformatique.cpp  Projetinformatique.h  Readme.md  init-repository  main.cpp
database/: Database.cpp
etc/: img1.txt  img2.txt
image/: Image.cpp  Image.h
src/: Projetinformatique.cpp  Projetinformatique.h  main.cpp
src/database/: Database.cpp  Database.h
src/descriptor/: ImageDescriptor.cpp  ImageDescriptor.h
src/gui/: LoginWindow.cpp  LoginWindow.h  databasewindow.cpp  databasewindow.h  databasewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui  traitementimagewindow.cpp  traitementimagewindow.h  traitementimagewindow.ui
src/gui/database/: DatabaseWindow.cpp  DatabaseWindow.h
src/gui/list/: ListWindow.cpp  ListWindow.h
src/gui/login/: LoginWindow.cpp  LoginWindow.h
src/gui/processing/: ImageProcessingWindow.cpp  ImageProcessingWindow.h
src/image/: Image.cpp  Image.h
src/user/: User.cpp  User.h  UserRight.cpp  UserRight.h
ui/: databasewindow.ui  imageprocessingwindow.ui  listwindow.ui  loginwindow.ui  ui_databasewindow.h  ui_loginwindow.h
